# simplstyles

./: .gitignore  README.md  pyproject.toml
simplstyles/: __init__.py  ayu-light-talk.mplstyle  ayu-light.mplstyle  ayu-mirage-talk.mplstyle  ayu-mirage.mplstyle  clean-dark-talk.mplstyle  clean-dark.mplstyle  clean-talk.mplstyle  clean.mplstyle  everforest-dark-talk.mplstyle  fleet-dark-talk.mplstyle  fleet-dark.mplstyle  nord-dark-talk.mplstyle  nord-dark.mplstyle  nord-talk.mplstyle  nord.mplstyle  solarized-dark-talk.mplstyle  solarized-dark.mplstyle  solarized-light-talk.mplstyle  solarized-light.mplstyle
simplstyles/ayu/: ayu-mirage-talk.mplstyle
simplstyles/everforest/: everforest-light.mplstyle
simplstyles/fleet/: light-talk.mplstyle  light.mplstyle
simplstyles/solarized/: dark.mplstyle
simplstyles/styles/: clean-light.mplstyle  everforest-dark.mplstyle  everforest-light-talk.mplstyle  solarized-dark-talk.mplstyle  solarized-light.mplstyle
