[project]
name = "simplstyles"
version = "1.0.8"
description = "Simple and clean matplotlib style sheets "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
]
classifiers = [
    "Framework :: Matplotlib",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Repository = "https://github.com/garland-culbreth/simplstyles"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
